# nlp-course-assignment-1

./: README.md  Sequence to Sequence Learning with LSTM.ipynb
Task1_Word2Vec/: word2vec_gensim.ipynb
Task3_SurnameClassification/: Task3_Surname_RNN.py
Task4_SurnameGeneration/: Model1_Unconditioned_Surname_Generation.py
Task5_AttentionVisualization/: README.md  attention_visualization.py  pyproject.toml
